# oci_mcp_metric_agent

./: .gitlab-ci.yml  Dockerfile  README.md  app.py  http_server.py  pyproject.toml  requirements.txt  server.py
